name:                influo
version:             0.1.0.0
synopsis:            A HTTP Stress Tool
-- description:         
homepage:            http://github.com/aloiscochard/influo
license:             Apache-2.0
license-file:        LICENSE
author:              Alois Cochard
maintainer:          alois.cochard@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable influo
  default-language:    Haskell2010
  main-is:             src/Main.hs
                        -- -fllvm
  ghc-options:         -O2 -threaded -fwarn-incomplete-patterns
  default-extensions:  DeriveDataTypeable, ExistentialQuantification, FlexibleContexts, NoMonomorphismRestriction, TypeFamilies, ScopedTypeVariables
  build-depends:       base >=4.6 && <4.7, async, bytestring, containers, criterion, HTTP, monad-loops, monoid-statistics, monoids, mwc-random, primitive, stm, transformers
